--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -1,16 +1,18 @@
 body,
 html {
-  font-family: "Inter", serif;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
 }
+
 button {
   font-family: "Inter", serif;
 }
+
 button:hover {
   cursor: pointer;
 }
+
 .content_wrapper {
   display: flex;
   flex-grow: 1;
@@ -34,24 +36,46 @@ button:hover {
   box-shadow: 0px 0px 4px 0px #0000001a;
 }
 
+span {
+  font-size: 16px;
+}
+
 .nav_btn {
+  background-color: #2a3647;
   width: 232px;
   color: #cdcdcd;
   padding: 16px 0;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  img {
+
+  span {
     padding-left: 60px;
     display: flex;
-    margin-right: 4px;
+    align-items: center;
+    gap: 8px;
+  }
+}
+
+.active {
+  background-color: rgb(26, 34, 46);
+}
+
+.active:hover {
+  background-color: rgb(26, 34, 46) !important;
+  cursor: default !important;
+  span {
+  transform: scale(1) !important; 
   }
 }
 
 .nav_btn:hover {
-  color: white;
-  background-color: rgb(26, 34, 46);
+  background: #2A3D59;
   cursor: pointer;
+}
+
+.nav_btn:hover span {
+  transform: scale(1.05);
 }
 
 .navBar {
@@ -60,6 +84,18 @@ button:hover {
   align-items: center;
   width: 100%;
   padding-bottom: 80%;
+}
+
+.nav-link {
+  align-self: flex-start;
+  color: #cdcdcd;
+  padding-left: 60px;
+}
+
+.nav-link:hover {
+  font-weight: bold;
+  color: #29ABE2;
+  transform: scale(1.05);
 }
 
 .paddingleft {
@@ -80,7 +116,6 @@ button:hover {
   background-color: rgb(255, 255, 255);
   height: 80px;
   width: 100%;
-  margin-bottom: 60px;
 
   p {
     font-size: larger;
