--- a/styles/standard.css
+++ b/styles/standard.css
@@ -59,6 +59,24 @@ button {
     gap: 80px;
 }
 
+.flex-center {
+    justify-content: center !important;
+    align-items: center;
+}
+
 .overflow-hidden {
     overflow: hidden;
+}
+
+a {
+    text-decoration: none;
+}
+
+.margin-top-350 {
+    margin-top: 350px;
+    padding: 0 !important;
+}
+
+.gap-16 {
+    gap: 16px;
 }
