--- a/style.css
+++ b/style.css
@@ -1,26 +1,23 @@
 @font-face {
-    font-family: "inter";
-    src: url(./assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf);
+  font-family: "inter";
+  src: url(./assets/fonts/Inter/Inter-VariableFont_opsz\wght.ttf);
 }
 
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "inter";
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "inter";
 }
 
 .content-width {
-    display: flex;
-    width: 1440px;
-    margin: 0 auto;
+  display: flex;
+  width: 1440px;
+  margin: 0 auto;
 }
 
 .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: calc(1440px - 232px);
+  background: #f6f8fa;
+  display: flex;
+  flex-direction: column;
+  width: calc(1440px - 232px);
 }
-
-
-
-
