--- a/styles/standard.css
+++ b/styles/standard.css
@@ -1,82 +1,82 @@
 .d-none {
-    display: none;
+  display: none;
 }
 
 button {
-    border: unset;
-    cursor: pointer;
+  border: unset;
+  cursor: pointer;
 }
 
 .button-general {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .button-summary {
-    border-radius: 30px;
+  border-radius: 30px;
 }
 
 .content-width {
-    width: 1440px;
-    margin: 0 auto;
+  width: 1440px;
+  margin: 0 auto;
 }
 
 .vl {
-    width: 0px;
-    height: 59px;
-    gap: 0px;
-    opacity: 0px;
-    border: 2px solid #29ABE2;
-    border-radius: 2px;
+  width: 0px;
+  height: 59px;
+  gap: 0px;
+  opacity: 0px;
+  border: 2px solid #29abe2;
+  border-radius: 2px;
 }
 
 .font-size-20px {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .font-size-27-px {
-    font-size: 27px;
+  font-size: 27px;
 }
 
 .font-size-61px {
-    font-size: 61px;
+  font-size: 61px;
 }
 
 .font-size-16px {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .font-size-47px {
-    font-size: 47px;
+  font-size: 47px;
 }
 
 .color-2A3647 {
-    color: #2A3647;
+  color: #2a3647;
 }
 
 .flex-box {
-    display: flex;
-    align-items: center;
-    gap: 80px;
+  display: flex;
+  align-items: center;
+  gap: 80px;
 }
 
 .flex-center {
-    justify-content: center !important;
-    align-items: center;
+  justify-content: center !important;
+  align-items: center;
 }
 
 .overflow-hidden {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .margin-top-350 {
-    margin-top: 350px;
-    padding: 0 !important;
+  margin-top: 350px;
+  padding: 0 !important;
 }
 
 .gap-16 {
-    gap: 16px;
+  gap: 16px;
 }
