--- a/style.css
+++ b/style.css
@@ -11,14 +11,12 @@
 
 .content-width {
     display: flex;
-    width: 1440px;
-    margin: 0 auto;
 }
 
 .content-wrapper {
     display: flex;
     flex-direction: column;
-    width: calc(1440px - 232px);
+    width: 100%;
 }
 
 
