--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -86,6 +86,15 @@ span {
   padding-bottom: 80%;
 }
 
+.judicial-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 40vh;
+  justify-content: end;
+}
+
 .nav-link {
   align-self: flex-start;
   color: #cdcdcd;
