--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -41,6 +41,7 @@ span {
 }
 
 .nav_btn {
+  height: 46px;
   background-color: #2a3647;
   width: 232px;
   color: #cdcdcd;
@@ -84,6 +85,7 @@ span {
   align-items: center;
   width: 100%;
   padding-bottom: 80%;
+  gap: 15px;
 }
 
 .judicial-links {
