--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "inter";
-  src: url(./assets/fonts/Inter/Inter-VariableFont_opsz\wght.ttf);
+  src: url(./assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf);
 }
 
 * {
