--- a/styles/board.css
+++ b/styles/board.css
@@ -53,6 +53,7 @@
 }
 
 .find-task {
+    transition: border-color 0.1s ease-out;
     height: 48px;
     width: 312px;
     padding: 8px 16px;
@@ -61,6 +62,10 @@
     background-color: white;
     display: flex;
     justify-content: space-between;
+}
+
+.find-task:focus-within {
+    border: 1px solid #29ABE2
 }
 
 .find-task input {
@@ -80,14 +85,13 @@
     display: flex;
     justify-content: space-between;
     justify-self: flex-end;
-    gap: 40px;
 }
 
 .flex-title {
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
-
+    max-width: 244px;
 }
 
 .btn-title {
@@ -103,4 +107,17 @@
 .btn-title:hover {
     color: #29ABE2;
     border-color: #29ABE2;
+}
+
+.board-wrapper {
+    padding: 64px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.board-field {
+    max-width: 244px;
+    flex-grow: 1;
 }
