--- a/styles/board.css
+++ b/styles/board.css
@@ -130,8 +130,22 @@
     max-height: 225px;
     min-height: 177px;
     flex-grow: 1;
+    box-shadow: 0px 0px 10px 3px #00000014;
+
 }
 
 .board-card:active {
     transform: rotate(5deg);
+}
+
+.no-tasks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 48px;
+    background-color: rgb(231,231,231);
+    color: #A8A8A8;
+    border-radius: 10px;
+    border: 1px dotted #A8A8A8;
+    box-shadow: 0px 0px 4px 0px #00000029;
 }
