changes in addTask.html.css.js

--- a/styles/addtask.css
+++ b/styles/addtask.css
@@ -173,3 +173,104 @@
   max-height: 136px;
   resize: none;
 }
+.prio-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.prio-btn-urgent,
+.prio-btn-medium,
+.prio-btn-low {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 136px;
+  height: 56px;
+  padding: 16px 10px 16px 10px;
+  gap: 8px;
+  border-radius: 10px;
+  opacity: 0px;
+  background: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  box-shadow: 0px 0px 4px 0px #0000001a;
+}
+
+.prio-btn-urgent:hover,
+.prio-btn-medium:hover,
+.prio-btn-low:hover {
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.urgent-btn-active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 136px;
+  height: 56px;
+  padding: 16px 10px 16px 10px;
+  gap: 8px;
+  border-radius: 10px;
+  opacity: 0px;
+  background: #ff3d00;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  box-shadow: 0px 0px 4px 0px #0000001a;
+}
+
+.medium-btn-active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 136px;
+  height: 56px;
+  padding: 16px 10px 16px 10px;
+  gap: 8px;
+  border-radius: 10px;
+  opacity: 0px;
+  background: #ffa800;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  box-shadow: 0px 0px 4px 0px #0000001a;
+}
+
+.low-btn-active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 136px;
+  height: 56px;
+  padding: 16px 10px 16px 10px;
+  gap: 8px;
+  border-radius: 10px;
+  opacity: 0px;
+  background: #7ae229;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  box-shadow: 0px 0px 4px 0px #0000001a;
+}
+
+.low-btn-active:hover,
+.medium-btn-active:hover,
+.urgent-btn-active:hover {
+  cursor: default;
+}
