--- a/styles/addtask.css
+++ b/styles/addtask.css
@@ -1,8 +1,18 @@
+.content-right {
+  margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
+}
 .addTask-header {
   width: 100%;
   display: flex;
   h1 {
-    margin-left: 64px;
+    padding-left: 32px;
+    font-weight: 700;
+    font-size: 61px;
+    line-height: 73.2px;
   }
 }
 
@@ -11,24 +21,20 @@
 }
 
 .addTask-wrapper {
-  width: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 64px;
+  width: 1000px;
+  padding-left: 32px;
 }
 
 .addTask-left {
-  width: 460px;
-  height: 400px;
-  padding: 32px;
+  width: 50%;
+  padding-right: 32px;
 }
 
 .addTask-right {
   border-left: solid 1px #c9cdd3;
-  width: 400px;
-  height: 400px;
-  padding: 32px;
+  width: 50%;
+  padding-left: 32px;
 }
 
 /* .addTask-title {
@@ -47,9 +53,12 @@
 }
 
 .addTask-section p {
-  font-size: 14px;
-  font-weight: bold;
   color: #333;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
 }
 
 .addTask-section input {
@@ -100,28 +109,18 @@
 
 .prio-btn {
   display: flex;
-  gap: 10px;
 }
 
 .addTask-footer {
+  width: 1000px;
   display: flex;
   justify-content: space-between;
   margin-top: 16px;
-  padding: 0 32px;
-}
-
-.createTask-button {
-  width: 183px;
-  height: 56px;
-  padding: 16px 0px 0px 0px;
-  gap: 4px;
-  border-radius: 10px;
-  background: #2a3647;
-  color: White;
+  padding-left: 32px;
 }
 
 .addTask-subtasks {
-  width: 440px;
+  width: 100%;
   margin-bottom: 20px;
 }
 
@@ -144,9 +143,11 @@
 }
 
 .addTask-subtasks p {
-  font-size: 14px;
-  font-weight: bold;
   color: #333;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 .addTask-subtasks input {
@@ -158,14 +159,10 @@
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.addTask-subtasks input:focus {
-  border-color: #007bff;
-  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-  outline: none;
+.addTask-subtasks:focus {
 }
 .description-area {
   height: 136px;
-  width: 440px;
   gap: 4px;
   border-radius: 5px;
   border: 1px solid #d1d1d1;
@@ -175,7 +172,7 @@
 }
 .prio-buttons {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 
 .prio-btn-urgent,
@@ -273,4 +270,57 @@
 .medium-btn-active:hover,
 .urgent-btn-active:hover {
   cursor: default;
+}
+
+.clear-create {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.clear-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2a3647;
+  width: 110px;
+  height: 56px;
+  border: 1px solid #c9cdd3;
+  gap: 4px;
+  border-radius: 10px;
+  border-width: 1px;
+  padding: 16px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+}
+
+.createTask-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 183px;
+  height: 56px;
+  padding: 16px;
+  gap: 4px;
+  border-radius: 10px;
+  background: #2a3647;
+  color: White;
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 25.2px;
+  letter-spacing: 0%;
+}
+
+.createTask-button:hover {
+  background: #091931;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.clear-btn:hover {
+  border: 1px solid #091931;
+  box-shadow: 0px 4px 4px 0px #00000040;
 }
