--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -12,6 +12,12 @@
   background-color: #fff;
 }
 
+#assigned-to-field:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  outline: none;
+}
+
 .dropdown-content {
   display: none;
   position: absolute;
