--- a/styles/board.css
+++ b/styles/board.css
@@ -101,23 +101,31 @@
 }
 
 .board-wrapper {
-    padding: 8px 64px;
-    height: 100%;
+    padding: 0 64px;
+    height: calc(100% - 232px);
     width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 26px;
 }
 
-.board-wrapper > * {
+.board-wrapper>* {
     flex: 1 1 0;
     min-width: 0;
 }
 
 .board-title-field-wrapper {
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
+}
+
+.board-field {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
 .board-card {
@@ -140,7 +148,7 @@
     justify-content: center;
     align-items: center;
     height: 48px;
-    background-color: rgb(231,231,231);
+    background-color: rgb(231, 231, 231);
     color: #A8A8A8;
     border-radius: 10px;
     border: 1px dotted #A8A8A8;
