started the contacts.html + added some js functions in addtask.html

--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -102,3 +102,17 @@
     color: #fff;
   }
 }
+
+.createTask-button:disabled {
+  box-shadow: none;
+  background-color: #d3d3d3; /* Light gray background color when disabled */
+  color: #a9a9a9; /* Gray text color when disabled */
+  cursor: not-allowed; /* Change cursor to indicate the button is not clickable */
+}
+
+.current-letter {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  background-color: #f6f5fa;
+}
