--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -121,12 +121,14 @@ span {
 }
 
 .header {
+  z-index: 3;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: rgb(255, 255, 255);
   height: 80px;
   width: 100%;
+  box-shadow: 0px 4px 4px 0px #0000001a;
 
   p {
     font-size: larger;
