--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -121,19 +121,19 @@ span {
 }
 
 .header {
+  padding: 20px 40px 20px 116px;
   z-index: 3;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: rgb(255, 255, 255);
-  height: 80px;
+  height: 96px;
   width: 100%;
   box-shadow: 0px 4px 4px 0px #0000001a;
 
   p {
     font-size: larger;
-    font-weight: bolder;
-    padding: 16px 16px 16px 128px;
+    font-weight: 400;
     margin: 0;
   }
 }
@@ -144,9 +144,8 @@ span {
 }
 
 .question-mark-img {
-  width: 32px;
-  height: 32px;
-  margin-right: 16px;
+  width: 20px;
+  height: 20px;
 }
 
 .question-mark:hover {
@@ -155,9 +154,8 @@ span {
 }
 
 .header_btn_and_pic {
-  padding: 16px;
   display: flex;
-  gap: 8px;
+  gap: 16px;
   align-items: center;
 }
 
