--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -1,4 +1,24 @@
+/* Animation für das Overlay */
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideOutToRight {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
 .add-contact-overlay {
+  z-index: 5;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,8 +28,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: translateX(100%);
+  animation: slideInFromRight 0.3s forwards;
 }
 
+.add-contact-overlay.hide {
+  animation: slideOutToRight 0.3s forwards;
+}
 .content-overlay-wrapper {
   display: flex;
   width: 1212px;
@@ -24,6 +49,8 @@
 }
 
 .close-icon {
+  width: 60px;
+  height: 60px;
   padding: 8px;
 }
 
@@ -38,17 +65,16 @@
   color: white;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
   padding: 20px;
+  padding-top: 80px;
   font-family: Inter;
   font-weight: 700;
   font-size: 61px;
   line-height: 73.2px;
 
   img {
-    width: 53px;
-    height: 66px;
+    width: 86px;
+    height: 99px;
     padding-left: 20px;
     padding-bottom: 20px;
   }
@@ -95,26 +121,29 @@
   font-size: 16px;
 }
 
-button {
+button:hover {
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.delete-btn-overlay {
   padding: 10px 15px;
   margin: 10px 5px;
   border: none;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
-}
-
-button:hover {
-  box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-.delete-btn-overlay {
   background: white;
   color: black;
   border: 1px solid black;
 }
 
 .save-btn-overlay {
+  padding: 10px 15px;
+  margin: 10px 5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
   background: #1e2a3a;
   color: white;
 }
