--- a/styles/login.css
+++ b/styles/login.css
@@ -4,13 +4,26 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    overflow: hidden;
+    background-color: #d8eef8;
+
+
 }
 
 /*   :::::::   animationen   :::::::   */
 @keyframes fade-out {
-
     0% {
         opacity: 1;
     }
@@ -37,23 +50,49 @@ body {
 
 /*   :::::::   'not a user' login   :::::::   */
 .nau-sign-up-box {
-    position: absolute;
-    top: 48px;
-    right: 0;
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    padding: 0 48px;
+    position: relative;
+    bottom: 80px;    
+   /*   :::::::   
+    z-index: 1;*/
 }
 
 .nau-sign-up {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 279px;
+    width: 320px;
     height: 40px;
     margin-right: 40px;
     padding: 8px;
+    gap: 16px;
 }
+
+.nau-sign-up button {
+    width: 80px;
+    height: 32px;
+    padding: 8px 16px 8px 16px;
+    border: none;
+    border-radius: 8px;
+    background-color: #2A3647;
+    gap: 10px;
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.nau-sign-up button:hover,
+.login:hover,
+.guest-login:hover {
+
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
 
 /*   :::::::   logo und animation   :::::::   */
 .p1-logo-box {
@@ -64,9 +103,11 @@ body {
     justify-content: center;
     align-items: center;
     background: transparent;
-    z-index: 1050;
+    z-index: 3;
 }
-
+.p1-logo-box.hidden {
+    z-index: -1; 
+}
 .p1-logo {
     position: fixed;
     top: 50%;
@@ -82,7 +123,7 @@ body {
     animation-duration: 1s;
     animation-delay: 2s;
     transition-timing-function: ease-in-out;
-    z-index: 1060;
+    z-index: 4;
 }
 
 .backdrop {
@@ -101,25 +142,32 @@ body {
 
 /*   :::::::   page 'Login'   :::::::   */
 .login-content-box {
-    position: relative;
+    background-color: #d8eef8;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     width: 100%;
     height: 100vh;
-    background-color: #F6F7F8;
+    min-height: 80vh;
+    /*background-color: #F6F7F8;*/
+    padding: 48px 0;
+    position: relative;
+    overflow: hidden;
 }
 
 .login-content {
+    background-color: rgb(214, 243, 186);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 652px;
     height: 449px;
+    min-height: 449px;
     background-color: rgb(255, 255, 255);
     border-radius: 30px;
+    
 }
 
 /*   :::::::   'Login' headline   :::::::   */
@@ -170,10 +218,31 @@ body {
 .login-form form input {
     width: 422px;
     height: 48px;
-    padding: 8px 16px;
     color: rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 6px;
+}
+
+input#email {
+    background-image: url('../assets/svg/mail.svg');
+    background-size: 20px 16px;
+    background-repeat: no-repeat;
+    background-position: calc(100% - 20px) center;
+    padding: 5px 16px;
+}
+
+input#email:hover,
+input#password:hover {
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+input#password {
+    background-image: url('../assets/svg/lock.svg');
+    background-size: 20px 16px;
+    background-repeat: no-repeat;
+    background-position: calc(100% - 20px) center;
+    padding: 5px 16px;
 }
 
 .login-button-box {
@@ -193,9 +262,9 @@ body {
     background-color: #2A3647;
     gap: 10px;
     color: rgb(255, 255, 255);
-    font-size: 21px ;
-    font-weight: 500 ;
-    
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
 
 }
 
@@ -208,11 +277,45 @@ body {
     background-color: rgb(255, 255, 255);
     gap: 10px;
     color: #2A3647;
-    font-size: 21px ;
-    font-weight: 700 ;
-    line-height: 25.2px;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
 }
 
+/*   :::::::   Privacy Policy and Legal notice  :::::::   */
+.prvt-polce-legl-note-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 48px;
+    position: relative;
+    top: 80px;
+    
+
+}
+
+.prvt-polce-legl-note {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    gap: 24px;
+}
+
+.priv-legal {
+    gap: 10px;
+    color: #A8A8A8;
+    font-size: 12px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+}
+
+.priv-legal:hover {
+    text-shadow: 1px 1px 2px #00000040;
+}
 
 .d-none {
     display: none;
