--- a/styles/hilfe.css
+++ b/styles/hilfe.css
@@ -35,6 +35,8 @@ h4 {
 }
 
 .li-text {
+    display: block;
+    width: calc(100% - 35px);
     position: relative;
     left: 35px;
     top: -7px;
