--- a/styles/login.css
+++ b/styles/login.css
@@ -102,12 +102,16 @@ body {
     cursor: pointer;
 }
 
-.nau-sign-up button:hover,
-.login:hover,
 .guest-login:hover {
-
     box-shadow: 0px 4px 4px 0px #00000040;
 }
+
+.nau-sign-up button:hover,
+.login:hover {
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-color: #007bff;
+}
+
 
 
 /*   :::::::   logo und animation   :::::::   */
