--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -9,12 +9,6 @@
   overflow-y: auto;
 }
 
-.contacts-content-right {
-  display: flex;
-  justify-content: center;
-  width: calc(100% - 456px);
-}
-
 .add-new-contact {
   position: absolute;
   top: 100px;
@@ -82,16 +76,6 @@
   color: #007cee;
 }
 
-.contacts-heading-right {
-  padding-top: 126px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 569px;
-  height: 73px;
-  gap: 16px;
-}
-
 .bigContacts {
   font-family: Inter;
   font-weight: 700;
@@ -131,4 +115,91 @@
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0%;
+}
+
+.contacts-content-right {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 456px);
+}
+
+.contacts-heading-right {
+  padding-top: 126px;
+  padding-left: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 569px;
+  height: 73px;
+  gap: 16px;
+}
+
+.contact-information {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 64px;
+  span {
+    font-weight: 400;
+    font-size: 20px;
+  }
+
+  .blue-mail {
+    color: #007cee;
+
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+.pic-and-name {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding-bottom: 32px;
+}
+
+.name-and-edit {
+  padding-left: 64px;
+}
+
+.edit-delete-btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.edit-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.delete-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.edit-btn:hover,
+.delete-btn:hover {
+  cursor: pointer;
+  scale: 1.1;
+
+  svg path {
+    stroke: #29abe2;
+    fill: #29abe2;
+  }
+
+  button {
+    color: #29abe2;
+    font-weight: bold;
+    box-shadow: none;
+  }
+}
+.mail-and-number {
 }
