--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -24,7 +24,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,6 +33,18 @@
 
 .add-contact-overlay.hide {
   animation: slideOutToRight 0.3s forwards;
+}
+
+.dark-background {
+  transition: opacity 0.3s ease-in-out;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.77);
+  z-index: 4;
 }
 .content-overlay-wrapper {
   display: flex;
@@ -100,10 +111,9 @@
 }
 
 .input-group {
-  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   padding-left: 40px;
 }
 
