--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -17,6 +17,10 @@
   }
 }
 
+.slider {
+  animation: slideInFromRight 0.5s ease-out forwards;
+}
+
 .add-contact-overlay {
   z-index: 5;
   position: fixed;
