--- a/styles/board.css
+++ b/styles/board.css
@@ -154,3 +154,32 @@
     border: 1px dotted #A8A8A8;
     box-shadow: 0px 0px 4px 0px #00000029;
 }
+
+.add-task-overlay {
+    background-color: rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-task-overlay-content {
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0px 0px 4px 0px #0000001A;
+    padding: 64px 74px;
+}
+
+.input [type="date"]::-webkit-inner-spin-button {
+    display: none;
+  }
+  
+  [type="date"]::-webkit-calendar-picker-indicator {
+    background: #fff url(./AddTaskSection/calendar.png) 97% 50% no-repeat
+    
+  }
