--- a/styles/board.css
+++ b/styles/board.css
@@ -169,6 +169,7 @@
 }
 
 .add-task-overlay-content {
+    height: 870px;
     background-color: white;
     border-radius: 30px;
     box-shadow: 0px 0px 4px 0px #0000001A;
