--- a/styles/signup.css
+++ b/styles/signup.css
@@ -50,31 +50,6 @@ body {
     z-index: 1;*/
 }
 
-/*
-.nau-sign-up {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 320px;
-    height: 40px;
-    margin-right: 40px;
-    padding: 8px;
-    gap: 16px;
-} 
-
-.nau-sign-up button {
-    width: 80px;
-    height: 32px;
-    padding: 8px 16px 8px 16px;
-    border: none;
-    border-radius: 8px;
-    background-color: #2A3647;
-    gap: 10px;
-    color: rgb(255, 255, 255);
-    font-size: 12px;
-    font-weight: 300;
-    cursor: pointer;
-}*/
 
 .nau-sign-up button:hover,
 .login:hover,
@@ -82,39 +57,6 @@ body {
 
     box-shadow: 0px 4px 4px 0px #00000040;
 }
-
-
-/*   :::::::   logo und animation   :::::::   */
-
-/*.p1-logo-box {
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    max-width: 1440px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: transparent;
-    z-index: 800;
-} 
-
-.p1-logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform-origin: top left;
-    transform: translate(-50%, -50%);
-    width: 274px;
-    height: 334px;
-    display: flex;
-    justify-content: center;
-    background: transparent;
-    animation: shrink-move forwards;
-    animation-duration: 1s;
-    animation-delay: 2s;
-    transition-timing-function: ease-in-out;
-    z-index: 999;
-}*/
 
 
 /*   :::::::   page 'Login'   :::::::   */
@@ -169,7 +111,7 @@ body {
 }
 
 .sgnp-form form {
-    width: 56%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -218,6 +160,7 @@ input#email:hover,
 input#password:hover {
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    cursor: pointer;
 }
 
 .sgnp-button-box {
@@ -225,6 +168,7 @@ input#password:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
     margin-top: 24px;
     gap: 20px;
 }
@@ -264,12 +208,54 @@ input#password:hover {
 
 }
 
-.confirm-priv-polce {
-    width: 100%;
+.confirm-priv-pol {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 
 }
-.check-priv-polce {
+
+.confirm-priv-pol label {
+    cursor: pointer;
+    display: flex;
+}
+
+.confirm-priv-pol input[type="checkbox"] {
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+
+}
+
+.confirm-priv-pol label::before {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    border: .05em solid #2A3647;
+    border-radius: .15em;
+    margin-right: .5em;
+    cursor: pointer;
+}
+
+.confirm-priv-pol label:hover::before,
+.confirm-priv-pol input[type="checkbox"]:hover + label::before,
+.confirm-priv-pol input[type="checkbox"]:focus + label::before {
+    box-shadow: 0px 4px 4px 0px #00000040;
+    background: #EDF2FA;
+
+}
+
+.confirm-priv-pol input[type="checkbox"]:checked+label::before {   
+    content: url('../assets/svg/box-checked.svg');
+    width: 1em;
+    height: 1em;
+    border: none;
+}
+
+
+.chb-priv-pol {
     width: 20px !important;
     height: 20px !important;
     margin-right: 10px !important;
@@ -307,7 +293,7 @@ input#password:hover {
     align-items: center;
     width: 100%;
     height: 48px;
-   /* position: relative; 
+    /* position: relative; 
     top: 80px;*/
 
     margin-top: 80px;
