--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -41,9 +41,10 @@
 
 .contacts-content-left-header {
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding: 16px;
-  background-color: white;
+  height: 60px;
+  background: white;
 }
 
 .contact-profile-picture {
