--- a/styles/login.css
+++ b/styles/login.css
@@ -118,7 +118,8 @@ body {
 /*   :::::::   logo und animation   :::::::   */
 .p1-logo-box {
     position: fixed;
-    height: 100vh;
+    height: 100%;
+    max-height: 1024px;
     width: 100%;
     max-width: 1440px;
     display: flex;
@@ -150,7 +151,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: rgba(255, 255, 255, 1);
     animation: fade-out forwards;
@@ -341,7 +342,10 @@ input#password {
     }
 
     .p1-logo img {
-        content: none;
-        background: url('../assets/svg/logo.svg') no-repeat;
+        display: none;
+    }
+
+    .logo-resp {
+        display: block;
     }
 }
