--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -136,7 +136,7 @@
 .contact-form input {
   width: 422px;
   height: 50px;
-  margin: 10px 0;
+
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
@@ -181,4 +181,10 @@ button:hover {
   color: white;
   box-shadow: 0px 0px 4px 0px #0000001a;
   border: 3px solid white;
+}
+
+.input-icon {
+  position: relative;
+  top: -36px;
+  right: 15px;
 }
