--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -1,5 +1,4 @@
 .content-right {
-  margin-top: 64px;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -14,6 +13,7 @@
     font-weight: 700;
     font-size: 61px;
     line-height: 73.2px;
+    margin-top: 55px;
   }
 }
 
@@ -81,7 +81,7 @@
 }
 
 [type="date"]::-webkit-calendar-picker-indicator {
-  background: #fff url(./calendar.png) 97% 50% no-repeat
+  background: #fff url(./calendar.png) 97% 50% no-repeat;
 }
 
 .description-area {
@@ -173,7 +173,7 @@
 
 .add-task-vl {
   width: 1px;
-  background-color: #D1D1D1;
+  background-color: #d1d1d1;
 }
 
 .addTask-subtasks input {
@@ -185,7 +185,8 @@
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.addTask-subtasks:focus {}
+.addTask-subtasks:focus {
+}
 
 .description-area {
   height: 136px;
