--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -1,5 +1,16 @@
 .content-right {
-  margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
+}
+
+.content-right-wrapper {
+  max-width: 1116px;
+  padding: 64px 74px;
+}
+
+.add-task-header-and-wrapper {
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -10,7 +21,6 @@
   display: flex;
 
   h1 {
-    padding-left: 32px;
     font-weight: 700;
     font-size: 61px;
     line-height: 73.2px;
@@ -23,18 +33,25 @@
 
 .addTask-wrapper {
   display: flex;
-  width: 1000px;
-  padding-left: 32px;
+  width: 100%;
+  justify-content: space-between;
+  gap: 35px;
 }
 
 .addTask-left {
-  width: 50%;
-  padding-right: 32px;
+  height: 376px;
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .addTask-right {
-  width: 50%;
-  padding-left: 32px;
+  height: 376px;
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* .addTask-title {
@@ -48,8 +65,9 @@
 } */
 
 .addTask-section {
-  width: 440px;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .addTask-section p {
