--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -1,13 +1,10 @@
-.content-right {
+.content-right-wrapper {
+  height: 100%;
+  max-width: 1116px;
+  padding: 110px 96px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 32px;
-}
-
-.content-right-wrapper {
-  max-width: 1116px;
-  padding: 64px 74px;
+  justify-content: space-between;
 }
 
 .add-task-header-and-wrapper {
@@ -24,8 +21,8 @@
     font-weight: 700;
     font-size: 61px;
     line-height: 73.2px;
-    margin-top: 55px;
-    padding-left: 64px;
+
+
   }
 }
 
@@ -41,6 +38,7 @@
 }
 
 .addTask-left {
+  width: calc(50% - 35px);
   height: 376px;
   display: flex;
   flex: auto;
@@ -49,7 +47,8 @@
 }
 
 .addTask-right {
-  height: 376px;
+  width: calc(50% - 35px);
+  height: 416px;
   display: flex;
   flex: auto;
   flex-direction: column;
@@ -106,14 +105,14 @@
 
 .description-area {
   height: 136px;
-  width: 440px;
+  width: 100%;
   gap: 4px;
   border-radius: 5px;
   border: 1px solid #d1d1d1;
-  max-width: 440px;
   max-height: 136px;
   resize: none;
 }
+
 
 .addTask-section textarea:focus {
   border-color: #007bff;
@@ -141,16 +140,15 @@
 }
 
 .addTask-footer {
-  width: 990px;
   display: flex;
   justify-content: space-between;
-  margin-top: 16px;
-  padding-left: 64px;
 }
 
 .addTask-subtasks {
   width: 100%;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .subtasks-btn {
@@ -178,11 +176,6 @@
   outline: none;
 }
 
-.addTask-subtasks {
-  width: 440px;
-  margin-bottom: 20px;
-}
-
 .addTask-subtasks p {
   color: #333;
   font-family: Inter;
@@ -201,22 +194,13 @@
   padding: 10px;
 
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 20px;
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.addTask-subtasks:focus {
-}
+.addTask-subtasks:focus {}
 
-.description-area {
-  height: 136px;
-  gap: 4px;
-  border-radius: 5px;
-  border: 1px solid #d1d1d1;
-  max-width: 440px;
-  max-height: 136px;
-  resize: none;
-}
+
 
 .prio-buttons {
   display: flex;
