--- a/styles/board.css
+++ b/styles/board.css
@@ -160,10 +160,11 @@ body {
 }
 
 .add-task-overlay {
+    pointer-events: all;
     overflow: hidden;
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     display: flex;
@@ -171,10 +172,15 @@ body {
     justify-content: center;
     align-items: center;
     background-color: transparent;
-    transition: background-color 0.5s ease-in-out;}
+    transition: background-color 0.5s ease-in-out;
+}
+
+.add-task-overlay:hover {
+    background-color: rgba(0, 0, 0, 0.2) !important;
+}
 
 .add-task-overlay.active {
-    background-color: rgba(0, 0, 0, 0.2); /* Zielwert */
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .add-task-overlay-content {
@@ -225,9 +231,6 @@ body {
 .close-btn:hover img {
     transform: scale(1.05);
 }
-
-
-
 
 .input [type="date"]::-webkit-inner-spin-button {
     display: none;
