--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -46,6 +46,10 @@
   justify-content: space-between;
 }
 
+input {
+  cursor: pointer;
+}
+
 .addTask-right {
   width: calc(50% - 35px);
   height: 416px;
@@ -101,6 +105,7 @@
 
 [type="date"]::-webkit-calendar-picker-indicator {
   background: #fff url(./calendar.png) 97% 50% no-repeat;
+  cursor: pointer;
 }
 
 .description-area {
@@ -113,6 +118,9 @@
   resize: none;
 }
 
+textarea {
+  cursor: pointer;
+}
 
 .addTask-section textarea:focus {
   border-color: #007bff;
@@ -316,7 +324,6 @@
   justify-content: center;
   align-items: center;
   color: #2a3647;
-  width: 110px;
   height: 56px;
   border: 1px solid #c9cdd3;
   gap: 4px;
@@ -355,4 +362,21 @@
 .clear-btn:hover {
   border: 1px solid #091931;
   box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.input-icon-category-container {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -50%;
+  left: 90%;
+}
+
+.input-icon-category-container:hover {
+  cursor: pointer;
+  background-color: #D9D9D9;
 }
