--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -196,19 +196,38 @@ button:hover {
   box-shadow: 0 0 5px rgba(41, 171, 226, 0.5);
 }
 
+.notification-space {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
 .click-notification {
-  z-index: 2000;
-  position: fixed;
+  width: 326px;
+  height: 74px;
+  margin-left: 64px;
+  display: none;
   background-color: #2a3647;
   color: white;
-  padding: 10px 20px;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
 
 .click-notification.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: slideInFromRight 0.5s ease-out forwards;
   opacity: 1;
 }
