--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -89,10 +89,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 50%;
-  right: 4%;
-  transform: translateY(-50%);
+  position: relative;
+  top: -50%;
+  left: 90%;
 }
 
 .input-icon-assign-to-container:hover {
