--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -378,5 +378,5 @@ textarea {
 
 .input-icon-category-container:hover {
   cursor: pointer;
-  background-color: #D9D9D9;
+  background-color: #d9d9d98c;
 }
