--- a/styles/board.css
+++ b/styles/board.css
@@ -141,6 +141,7 @@ body {
   min-height: 177px;
   flex-grow: 1;
   box-shadow: 0px 0px 10px 3px #00000014;
+  transform-origin: bottom left;
 }
 
 .board-card:active {
@@ -157,6 +158,7 @@ body {
   border-radius: 10px;
   border: 1px dotted #a8a8a8;
   box-shadow: 0px 0px 4px 0px #00000029;
+  pointer-events: none;
 }
 
 .add-task-overlay {
