added view more validation details

--- a/styles/login.css
+++ b/styles/login.css
@@ -240,7 +240,6 @@ input#email {
 input#email:hover,
 input#password:hover {
     border-color: #007bff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 input#password {
@@ -267,7 +266,7 @@ input#password {
     
 }
 .error-highlight {
-    border-color: red;
+    border-color: red !important;
 }
 
 #loginForm {
