--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -553,6 +553,7 @@ textarea {
   border: none !important;
   border-radius: 1px !important;
   border-bottom: 1px solid #29abe2 !important;
+  box-shadow: none !important;
 }
 
 .addTask-category {
